[gd_scene load_steps=5 format=3 uid="uid://bngaxvyaqymu3"]

[ext_resource type="Script" uid="uid://dmebdsxi4kkfd" path="res://scenes/script/main_menyu.gd" id="1_ovxvm"]
[ext_resource type="Texture2D" uid="uid://c5dd2vhlu8rdh" path="res://assets/Medieval_Castle_Asset_Pack/Background/layer_1.png" id="2_ug6k3"]
[ext_resource type="Texture2D" uid="uid://bq5sjr87ng5hf" path="res://assets/ECHOES-OF-ABYSS-5-23-2025.png" id="3_fje1k"]
[ext_resource type="AudioStream" uid="uid://caglydmnp7f4b" path="res://assets/m30_dream_song-77650.mp3" id="4_d7ru5"]

[node name="MENU" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovxvm")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ug6k3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.592
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -23.0
offset_right = 53.016
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2

[node name="menu" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "PLAY"

[node name="idk" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "IDK"

[node name="exit" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "EXIT"

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 64.0
offset_right = 1098.0
offset_bottom = 294.0
texture = ExtResource("3_fje1k")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_d7ru5")
autoplay = true

[connection signal="pressed" from="VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/idk" to="." method="_on_idk_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
